deployment/kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rtc-egress
  labels:
    name: rtc-egress
